--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,6 +80,9 @@
 .black_btn {
 	@apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
+.black_btn_login {
+	@apply rounded-full border border-green-900 bg-red-300 py-1.5 px-5 text-black transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+}
 .gray_blueblack_btn {
 	@apply rounded-full border border-gray-500 bg-blue-900 py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
